<resources>
    <string name="app_name">Football Tracker</string>
    <string name="score" translatable="false">0 – 0</string>
    <string name="team1" translatable="false">Chelsea</string>
    <string name="team2" translatable="false">Liverpool</string>
    <string name="team1_shots" translatable="false">12</string>
    <string name="shots">Shots</string>
    <string name="team2_shots" translatable="false">7</string>
    <string name="shots_on_target">Shots on target</string>
    <string name="team1_shots_on_target" translatable="false">3</string>
    <string name="team2_shots_on_target" translatable="false">4</string>
    <string name="possession">Possession</string>
    <string name="team1_possession" translatable="false">49%</string>
    <string name="team2_possession" translatable="false">51%</string>
    <string name="passes">Passes</string>
    <string name="team1_passes" translatable="false">522</string>
    <string name="team2_passes" translatable="false">537</string>
    <string name="pass_accuracy">Pass accuracy</string>
    <string name="team1_pass_accuracy" translatable="false">83%</string>
    <string name="team2_pass_accuracy" translatable="false">83%</string>
    <string name="fouls">Fouls</string>
    <string name="team1_fouls" translatable="false">6</string>
    <string name="team2_fouls" translatable="false">17</string>
    <string name="yellow_cards">Yellow cards</string>
    <string name="team1_yellow_cards" translatable="false">1</string>
    <string name="team2_yellow_cards" translatable="false">4</string>
    <string name="red_cards">Red cards</string>
    <string name="team1_red_cards" translatable="false">0</string>
    <string name="team2_red_cards" translatable="false">0</string>
    <string name="offsides">Offsides</string>
    <string name="team1_offsides" translatable="false">4</string>
    <string name="team2_offsides" translatable="false">3</string>
    <string name="corners">Corners</string>
    <string name="team1_corners" translatable="false">3</string>
    <string name="team2_corners" translatable="false">5</string>
    <string name="game_statistics">Game statistics</string>
    <string name="history">History</string>
    <string name="new_game">New Game</string>
    <string name="create_nav">Create</string>
    <string name="details_nav">Details</string>
    <string name="button_creation">Save</string>
    <string name="teamName">Team Name</string>
    <string name="shot">Shots</string>
    <string name="shotOnTarget">Shots on target</string>
    <string name="cards">Cards</string>
    <string name="out">Out of game</string>
    <string name="faults">Faults</string>
    <string name="statTeam">Team statistics</string>
    <string name="statMoreteam">More statistics</string>
    <string name="statShotSuccess">Percentage of successful shots</string>
    <string name="statFaultTransfCard">Percentage of fault transformed in card</string>
    <string name="photoSentence">Add your best smile ...</string>
    <string name="location" />
</resources>